--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "nodejs sample api librarize.me",
   "main": "index.js",
   "scripts": {
+    "start": "node-dev ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/half-shell/wichita/issues"
   },
-  "homepage": "https://github.com/half-shell/wichita#readme"
+  "homepage": "https://github.com/half-shell/wichita#readme",
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "mysql": "^2.13.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "sequelize": "^3.30.4"
+  }
 }
